RESOLVED FIXED218248
[GStreamer] Mock video source doesn't set framerate on its caps
https://bugs.webkit.org/show_bug.cgi?id=218248
Summary [GStreamer] Mock video source doesn't set framerate on its caps
Philippe Normand
Reported 2020-10-27 11:03:36 PDT
.
Attachments
Patch (5.37 KB, patch)
2020-10-27 11:05 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2020-10-27 11:05:51 PDT
Philippe Normand
Comment 2 2020-10-27 11:39:09 PDT
Comment on attachment 412447 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=412447&action=review > Source/WebCore/platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:-73 > - auto buffer = adoptGRef(gst_buffer_new_wrapped(g_memdup(data.releaseBuffer().get(), size), size)); A memcpy is avoided as well
EWS
Comment 3 2020-10-28 06:13:41 PDT
Committed r269101: <https://trac.webkit.org/changeset/269101> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412447 [details].
Radar WebKit Bug Importer
Comment 4 2020-10-28 06:14:42 PDT
Note You need to log in before you can comment on or make changes to this bug.