[GStreamer] Mock video source doesn't set framerate on its caps https://bugs.webkit.org/show_bug.cgi?id=218248

Patch by Philippe Normand <pnormand@igalia.com> on 2020-10-28
Reviewed by Xabier Rodriguez-Calvar.

Set framerate on the sample caps and reduce code duplication.

* platform/graphics/gstreamer/MediaSampleGStreamer.cpp:
(WebCore::MediaSampleGStreamer::createImageSample):
* platform/graphics/gstreamer/MediaSampleGStreamer.h:
* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:
(WebCore::MockRealtimeVideoSourceGStreamer::updateSampleBuffer):

Canonical link: https://commits.webkit.org/230982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269101 268f45cc-cd09-0410-ab3c-d52691b4dbfc